fixed white space on the side

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,8 @@ background-color: #85e3f8;
 html, body {
   margin: 0;
   padding: 0;
-  clear: both;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 .navbar {
@@ -88,7 +89,6 @@ html, body {
   top: 119px;
   left: 38px;
   text-align: center;
-  width: 1000px;
 }
 
 .healthHeader {
@@ -102,7 +102,6 @@ html, body {
   top: -100px;
   left: 463px;
   text-align: center;
-  width: 1000px;
 }
 
 .agriHeader {
@@ -116,7 +115,6 @@ html, body {
   top: -299px;
   left: 870px;
   text-align: center;
-  width: 1000px;
 }
 
 .dataHeader {
@@ -160,8 +158,6 @@ html, body {
 }
 
 .talkingBookHome {
-  width: 787px;
-  height: 310px;
   position: relative;
   top: -220px;
   left: 220px;
@@ -176,7 +172,6 @@ html, body {
 }
 
 .community {
-  width: 945px;
   height: 545px;
   position: relative;
   top: -70px;
